--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
+    "react-table": "^7.0.0-rc.15",
     "unirest": "^0.6.0"
   },
   "scripts": {
