Implemented styling for login

--- a/package.json
+++ b/package.json
@@ -6,18 +6,25 @@
     "@material-ui/core": "^4.9.2",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.9.0",
+    "@material/elevation": "^4.0.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.4.1",
+    "material": "^0.4.3",
+    "material-components-web": "^4.0.0",
+    "mdbreact": "^4.25.1",
     "node-sass": "^4.13.1",
     "normalize.css": "^8.0.1",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
     "react-table": "^7.0.0-rc.15",
+    "reactstrap": "^8.4.1",
     "unirest": "^0.6.0"
   },
   "scripts": {
