--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "material": "^0.4.3",
     "material-components-web": "^4.0.0",
     "mdbreact": "^4.25.1",
+    "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "normalize.css": "^8.0.1",
     "react": "^16.12.0",
