--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
     "react-table": "^7.0.0-rc.15",
     "reactstrap": "^8.4.1",
+    "redux": "^4.0.5",
     "unirest": "^0.6.0"
   },
   "scripts": {
