--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"axios": "^0.19.2",
 		"body-parser": "^1.19.0",
 		"bootstrap": "^4.4.1",
+		"jquery": "^1.9.1",
 		"material": "^0.4.3",
 		"material-components-web": "^4.0.0",
 		"mdbreact": "^4.25.1",
@@ -27,6 +28,7 @@
 		"react-redux": "^7.2.0",
 		"react-router-dom": "^5.1.2",
 		"react-scripts": "3.3.1",
+		"react-select": "^3.0.8",
 		"react-table": "^7.0.0-rc.15",
 		"reactstrap": "^8.4.1",
 		"redux": "^4.0.5",
